Added more tests, locked down endpoints
